throws angular out

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,8 @@ img
     margin-top: 1.5em;
 	margin-bottom: 3.0em;
 }
-hr { 
+hr
+{ 
     display: block;
     margin-left: auto;
     margin-right: auto;
