--- a/css/audioplayer.css
+++ b/css/audioplayer.css
@@ -155,6 +155,18 @@
 		.audioplayer-bar-played
 		{
 			background: #007fd1;
+			background: -webkit-gradient( linear, left top, right top, from( #007fd1 ), to( #177BD5 ) );
+			background: -webkit-linear-gradient( left, #007fd1, #177BD5 );
+			background: -moz-linear-gradient( left, #007fd1, #177BD5 );
+			background: -ms-radial-gradient( left, #007fd1, #177BD5 );
+			background: -o-linear-gradient( left, #007fd1, #177BD5 );
+			background: linear-gradient( left, #007fd1, #177BD5 );
+			z-index: 2;
+		}
+		/*
+		.audioplayer-bar-played
+		{
+			background: #007fd1;
 			background: -webkit-gradient( linear, left top, right top, from( #007fd1 ), to( #c600ff ) );
 			background: -webkit-linear-gradient( left, #007fd1, #c600ff );
 			background: -moz-linear-gradient( left, #007fd1, #c600ff );
@@ -163,6 +175,7 @@
 			background: linear-gradient( left, #007fd1, #c600ff );
 			z-index: 2;
 		}
+		*/
 	.audioplayer-volume
 	{
 		width: 2.5em; /* 40 */
@@ -274,6 +287,22 @@
 				z-index: 1;
 				margin: 30% auto 0;
 			}
+			.audioplayer-volume-adjust div div
+				{
+					width: 100%;
+					height: 100%;
+					position: absolute;
+					bottom: 0;
+					left: 0;
+					background: #007fd1;
+					background: -webkit-gradient( linear, left bottom, left top, from( #007fd1 ), to( #177BD5 ) );
+					background: -webkit-linear-gradient( bottom, #007fd1, #177BD5 );
+					background: -moz-linear-gradient( bottom, #007fd1, #177BD5 );
+					background: -ms-radial-gradient( bottom, #007fd1, #177BD5 );
+					background: -o-linear-gradient( bottom, #007fd1, #177BD5 );
+					background: linear-gradient( bottom, #007fd1, #177BD5 );
+				}
+			/*
 				.audioplayer-volume-adjust div div
 				{
 					width: 100%;
@@ -289,6 +318,7 @@
 					background: -o-linear-gradient( bottom, #007fd1, #c600ff );
 					background: linear-gradient( bottom, #007fd1, #c600ff );
 				}
+			*/	
 		.audioplayer-novolume .audioplayer-volume
 		{
 			display: none;
